--- a/qemu-8.0.2/hw/riscv/Kconfig
+++ b/qemu-8.0.2/hw/riscv/Kconfig
@@ -88,3 +88,6 @@ config MY_BOARD
     bool
     select SERIAL
     select PFLASH_CFI01
+    select RISCV_ACLINT
+    select RISCV_APLIC
+    select SIFIVE_PLIC
