--- a/dts/my_board_sbi.dts
+++ b/dts/my_board_sbi.dts
@@ -6,10 +6,59 @@
 	#size-cells = <0x2>;
 	compatible = "riscv-my-board";
 	model = "riscv-my-board,qemu";
+
     //指定系统的默认输出设备路径为uart0
 	chosen {
 		stdout-path = "/soc/uart0@10000000";
+
+        //opensbi的domain描述节点
+		opensbi-domains {
+			compatible = "opensbi,domain,config";
+            //定义内存节点，代指某段内存
+			tmem: tmem{
+				compatible = "opensbi,domain,memregion";//节点属性，opensbi规定
+				base = <0x0 0xb0000000>;                //节点起始地址
+				order = <28>;                           //节点大小为2^28
+			};
+			//定义mmio内存节点，代指uart2，mimo表示为内存映射I/O区域
+			tuart: tuart{
+				compatible = "opensbi,domain,memregion";
+				base = <0x0 0x10002000>;
+				order = <8>;
+				mimo;
+				devices = <&uart2>;                      
+			};
+			//定义内存节点，代指所有内存
+			allmem: allmem{
+				compatible = "opensbi,domain,memregion";
+				base = <0x0 0x0>;
+				order = <64>;
+			};
+			//定义domian节点，该domain节点为trusted-domain
+			tdomain: trusted-domain{
+				compatible = "opensbi,domain,instance";
+				possible-harts = <&cpu7>;                            //允许使用的cpu
+				regions = <&tmem 0x7>, <&tuart 0x7>, <&allmem 0x7>;  //各个内存节点的权限
+				boot-hart = <&cpu7>;                                 //用于boot的core
+				next-arg1 = <0x0 0x00000000>;                        //下级程序的参数
+				next-addr = <0x0 0xb0000000>;                        //下级程序的起始地址
+				next-mode = <0x0>;                                   //下级程序的允许模式 0为U模式，1为S模式
+				system-reset-allowed;                                //允许复位
+			};
+			//定义domian节点，该domain节点为untrusted-domain
+		    udomain: untrusted-domain {
+		        compatible = "opensbi,domain,instance";
+		        possible-harts = <&cpu0 &cpu1 &cpu2 &cpu3 &cpu4 &cpu5 &cpu6>;
+		        regions = <&tmem 0x0>, <&tuart 0x0>, <&allmem 0x7>;
+				boot-hart = <&cpu0>;
+		        next-arg1 = <0x0 0x82200000>;
+		        next-addr = <0x0 0x82000000>;
+		        next-mode = <0x1>;
+		        system-reset-allowed;
+		    };
+		};
 	};
+
 	//定义物理内存，起始地址为0x80000000，大小为0x40000000（1GB）
 	memory@80000000 {
 		device_type = "memory";
@@ -28,6 +77,7 @@
 			reg = <0x0>;                          //CPU的编号
 			status = "okay";                      //CPU状态，表示被启用
 			compatible = "riscv";                 //所属架构
+			opensbi-domain = <&udomain>;          //所属domain
 			riscv,isa = "rv64imafdcsu";           //指令集属性
 			mmu-type = "riscv,sv48";              //内存管理单元属性，使用4级页表，39位虚拟地址空间
             //每个CPU的中断控制器
@@ -45,6 +95,7 @@
 			reg = <0x1>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -62,6 +113,7 @@
 			reg = <0x2>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -79,6 +131,7 @@
 			reg = <0x3>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -96,6 +149,7 @@
 			reg = <0x4>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -113,6 +167,7 @@
 			reg = <0x5>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -130,6 +185,7 @@
 			reg = <0x6>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -147,6 +203,7 @@
 			reg = <0x7>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&tdomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
