--- a/os/.vscode/settings.json
+++ b/os/.vscode/settings.json
@@ -7,6 +7,12 @@
         "sbi.h": "c",
         "address.h": "c",
         "stack.h": "c",
-        "task.h": "c"
+        "task.h": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c",
+        "typeinfo": "c",
+        "loader.h": "c",
+        "syscall.h": "c"
     }
 }
